# cJRPC2

./: .clang-format  .clang-tidy  LICENSE  README.md  meson.build
.github/workflows/: main.yml
examples/: calc.c  minimal.c  multiple.c
include/: cJRPC2.h
src/: cJRPC2.c
test/: meson.build
test/src/: meson.build  test-get-param-double.c
